--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "site_config": {
         "host" : "0.0.0.0",
-        "port" : 5000,
+        "port" : "$PORT",
         "debug": false
     },
     "openai_key": "sk-...",
