--- a/config.json
+++ b/config.json
@@ -5,10 +5,6 @@
         "debug": false
     },
     "openai_key": "sk-...",
-    "openai_api_base": "https://api.openai.com",
-    "proxy": {
-        "enable": true,
-        "http": "127.0.0.1:7890",
-        "https": "127.0.0.1:7890"
-    }
+    "openai_api_base": "https://api.openai.com"
+
 }
